# SDL_test

./: .gitignore  CMakeLists.txt  build.bat  build.sh  main.cpp
.github/workflows/: cmake_linux.yml  cmake_macos.yml  cmake_windows.yml
